<resources>
    <string name="app_name">Arbroathfc-live</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_home_screen"> Arbroath FC NewsFeed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
</resources>
