<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.josefbenassi.arbroathfc_live.LoginActivity"
    android:background="@android:color/background_light">

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSignUp"
        android:onClick="signUpOrLogin"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/tvLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:textIsSelectable="true" />

    <ImageView
        android:background="@drawable/abroathfc"
        android:id="@+id/ivLogo"
        android:contentDescription="@string/app_name"
        android:layout_height="250dp"
        android:layout_width="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/etUsername" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsername"
        android:hint="@string/username"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>
